syntax = "proto3";

package lumen.pqc.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "lumen/x/pqc/types";

service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc LinkAccountPQC(MsgLinkAccountPQC) returns (MsgLinkAccountPQCResponse);
}

message MsgLinkAccountPQC {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "lumen/x/pqc/MsgLinkAccountPQC";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string scheme = 2 [(gogoproto.moretags) = "yaml:\"scheme\""];
  bytes pub_key = 3 [
    (gogoproto.moretags) = "yaml:\"pub_key\"",
    (amino.dont_omitempty) = true
  ];
  bytes pow_nonce = 4 [
    (gogoproto.moretags) = "yaml:\"pow_nonce\"",
    (amino.dont_omitempty) = true
  ];
}

message MsgLinkAccountPQCResponse {}
